<resources>
    <string name="app_name">Contacts List</string>
    <string name="harold">Harold</string>
    <string name="sky">Sky</string>
    <string name="name">Placeholder</string>
    <string name="refresh">Refresh</string>
    <string name="fullname">fullName</string>
    <string name="profilepicture">profilePicture</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="placeholder">placeholder</string>
</resources>
